@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2514 2003/06/16 10:24:23 martti Exp $
+$NetBSD: CHANGES,v 1.2515 2003/06/16 11:53:33 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2467,3 +2467,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated cue to 20030616 [itojun 2003-06-16]
 	Updated postfix to 2.0.12 [martti 2003-06-16]
 	Updated distcc to 2.7 [martti 2003-06-16]
+	Updated pkgchk to 1.37 [abs 2003-06-16]
